added behaviour injection

--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.9</version>
         </dependency>
-
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>LATEST</version>
+        </dependency>
 
     </dependencies>
 </project>
